<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_background"
    android:orientation="vertical"
    android:paddingEnd="20sp"
    android:paddingStart="20sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="@string/insert_names"
        android:textColor="@color/accent"
        android:textSize="@dimen/dialog_title"/>

    <EditText
        android:id="@+id/dialog_team_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:hint="@string/first_team"
        android:inputType="text"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/dialog_input"/>

    <EditText
        android:id="@+id/dialog_team_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/second_team"
        android:inputType="text"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/dialog_input"/>

    <Button
        android:id="@+id/dialog_new_game_ok"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="10sp"
        android:text="@string/cont"
        android:textColor="@color/accent"
        android:textSize="@dimen/dialog_button"/>

</LinearLayout>