<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="10sp"
    >

    <TextView
        android:id="@+id/row_session_us"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="start"
        android:hint="@string/first_team"
        android:maxLines="1"
        android:textSize="@dimen/text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/minus"
        android:textSize="@dimen/text"
        />

    <TextView
        android:id="@+id/row_session_them"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:text="@string/second_team"
        android:textSize="@dimen/text"
        />

</LinearLayout>