<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_background"
    android:orientation="vertical"
    android:paddingBottom="0sp"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    android:paddingTop="20sp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/prompt_new_value"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="@dimen/text"/>

    <EditText
        android:id="@+id/dialog_game_value_new_val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:hint="@string/new_value"
        android:inputType="number"
        android:maxLines="1"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5sp">

        <Button
            android:id="@+id/dialog_game_value_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/accent"/>

        <Button
            android:id="@+id/dialog_game_value_ok"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/accent"/>

    </LinearLayout>

</LinearLayout>