<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/corner_background"
    android:orientation="vertical"
    android:paddingBottom="10sp"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    android:paddingTop="20sp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/dialog_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_delete_data_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/accent"
            android:textSize="@dimen/dialog_button"/>

        <Button
            android:id="@+id/dialog_delete_data_ok"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/accent"
            android:textSize="@dimen/dialog_button"/>

    </LinearLayout>

</LinearLayout>